[gd_scene load_steps=9 format=3 uid="uid://dapdu50lsax2u"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_5tv48"]
[ext_resource type="PackedScene" uid="uid://c1nk12uxdtn3n" path="res://scenes/player.tscn" id="1_imb1n"]
[ext_resource type="Resource" uid="uid://dgpnnsqa6cl37" path="res://resources/default_data.tres" id="3_actsw"]
[ext_resource type="PackedScene" uid="uid://b1wb2wct1wax7" path="res://scenes/ball.tscn" id="3_ef6uq"]
[ext_resource type="FontFile" uid="uid://bxmjrtsc2tb" path="res://assets/PublicPixel-rv0pA.ttf" id="4_y0dc8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mh31o"]
size = Vector2(1152, 61.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgygs"]
size = Vector2(47, 651.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sx70"]
size = Vector2(1150.75, 61)

[node name="Main" type="Node2D"]
script = ExtResource("1_5tv48")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("1_imb1n")]
position = Vector2(576, 614)
player_data = ExtResource("3_actsw")

[node name="Ball" parent="." instance=ExtResource("3_ef6uq")]
position = Vector2(-185, 324)
collision_mask = 3

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -30.75)
shape = SubResource("RectangleShape2D_mh31o")

[node name="Right" type="CollisionShape2D" parent="Borders"]
position = Vector2(1176, 322.438)
shape = SubResource("RectangleShape2D_cgygs")

[node name="Left" type="CollisionShape2D" parent="Borders"]
position = Vector2(-23, 320)
shape = SubResource("RectangleShape2D_cgygs")

[node name="Killzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(576, 678)
shape = SubResource("RectangleShape2D_5sx70")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Life" type="Label" parent="HUD"]
offset_left = 1067.0
offset_top = 5.0
offset_right = 1117.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("4_y0dc8")
theme_override_font_sizes/font_size = 50
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -25.0
offset_right = 225.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_y0dc8")
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
